Update yolobears.ipynb for github viewing

--- a/yolobears/yolobears.ipynb
+++ b/yolobears/yolobears.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prediction and actual labels (10)\n",
+    "### Prediction and actual labels (10)\n",
     "<img src=\"notebook_resource/train0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
     "<img src=\"notebook_resource/train0_labels.jpg\" alt=\"labels\" width=\"500\">\n",
@@ -52,14 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prediction and actual labels (100 epochs)\n",
-    "<img src=\"./runs/detect/train4/val_batch0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
+    "### Prediction and actual labels (100 epochs)\n",
+    "<img src=\"notebook_resource/train1_pred_0.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
-    "<img src=\"./runs/detect/train4/val_batch0_labels.jpg\" alt=\"labels\" width=\"500\">\n",
+    "<img src=\"notebook_resource/train1_labels_0.jpg\" alt=\"labels\" width=\"500\">\n",
     "<br>\n",
-    "<img src=\"./runs/detect/train4/val_batch1_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
+    "<img src=\"notebook_resource/train1_pred_1.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
-    "<img src=\"./runs/detect/train4/val_batch1_labels.jpg\" alt=\"labels\" width=\"500\">\n",
+    "<img src=\"notebook_resource/train1_labels_1.jpg\" alt=\"labels\" width=\"500\">\n",
     "\n",
     "\n",
     "It actually predicts some now, but not that great. Adding more data would probably help a lot but I don't want to do any more labelling. \n",
@@ -83,8 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prediction (pretrained model)\n",
-    "<img src=\"./runs/detect/val2/val_batch0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
+    "### Prediction (pretrained model)\n",
+    "<img src=\"notebook_resource/pretrained_val_batch0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
     "It detects bears pretty well already with a couple misclassifications. Now let's see how well it can detect bear types with the custom data."
    ]
@@ -103,10 +103,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prediction and actual labels (pretrained model, 10 epochs on custom set)\n",
-    "<img src=\"./runs/detect/train6/val_batch0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
+    "### Prediction and actual labels (pretrained model, 10 epochs on custom set)\n",
+    "<img src=\"notebook_resource/train0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
-    "<img src=\"./runs/detect/train6/val_batch0_labels.jpg\" alt=\"labels\" width=\"500\">\n",
+    "<img src=\"notebook_resource/train0_labels.jpg\" alt=\"labels\" width=\"500\">\n",
     "\n",
     "Nothing, just like in the model from scratch. Now again we try ONE HUNDRED EPOCHS."
    ]
@@ -125,16 +125,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### prediction and actual labels (pretrained model, 100 epochs on custom set)\n",
-    "<img src=\"./runs/detect/train7/val_batch0_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
+    "### Prediction and actual labels (pretrained model, 100 epochs on custom set)\n",
+    "<img src=\"notebook_resource/train3_pred.jpg\" alt=\"prediction\" width=\"500\">\n",
     "\n",
-    "<img src=\"./runs/detect/train7/val_batch0_labels.jpg\" alt=\"labels\" width=\"500\">\n",
+    "<img src=\"notebook_resource/train3_val.jpg\" alt=\"labels\" width=\"500\">\n",
     "\n",
     "<br>\n",
     "\n",
-    "<img src=\"./runs/detect/train7/confusion_matrix_normalized.png\" alt=\"confusion matrix (normalized)\" width=\"500\">\n",
+    "<img src=\"notebook_resource/confusion_matrix_normalized.jpg\" alt=\"confusion matrix (normalized)\" width=\"500\">\n",
     "\n",
-    "<img src=\"./runs/detect/train7/results.png\" alt=\"results\" width=\"700\">\n",
+    "<img src=\"notebook_resource/results.png\" alt=\"results\" width=\"700\">\n",
     "\n",
     "It has absolutely perfect results.  But now I should let you know a secret: the validation set is part of the training set, so it's probably heavily overfitting.\n",
     "\n",
@@ -292,7 +292,10 @@
     "    <video controls style=\"width: 30%; max-height: 100%; border: 1px solid #ccc; box-sizing: border-box;\">\n",
     "        <source src=\"https://files.catbox.moe/zx9wkb.mp4\" type=\"video/mp4\">\n",
     "    </video>\n",
-    "</div>"
+    "</div>",
+    "https://files.catbox.moe/jour4q.mp4",
+    "https://files.catbox.moe/5hfnkd.mp4",
+    "https://files.catbox.moe/zx9wkb.mp4"
    ]
   },
   {
