Update yolobears.ipynb for github viewing

--- a/yolobears/yolobears.ipynb
+++ b/yolobears/yolobears.ipynb
@@ -293,9 +293,12 @@
     "        <source src=\"https://files.catbox.moe/zx9wkb.mp4\" type=\"video/mp4\">\n",
     "    </video>\n",
     "</div>",
-    "https://files.catbox.moe/jour4q.mp4",
-    "https://files.catbox.moe/5hfnkd.mp4",
-    "https://files.catbox.moe/zx9wkb.mp4"
+    "[Video 1](https://files.catbox.moe/jour4q.mp4)",
+    "",
+    "[Video 2](https://files.catbox.moe/5hfnkd.mp4)",
+    "",
+    "[Video 3](https://files.catbox.moe/zx9wkb.mp4)",
+    ""
    ]
   },
   {
