Update yolobears.ipynb for github viewing

--- a/yolobears/yolobears.ipynb
+++ b/yolobears/yolobears.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "<img src=\"notebook_resource/confusion_matrix_normalized.jpg\" alt=\"confusion matrix (normalized)\" width=\"500\">\n",
+    "<img src=\"notebook_resource/confusion_matrix_normalized.png\" alt=\"confusion matrix (normalized)\" width=\"500\">\n",
     "\n",
     "<img src=\"notebook_resource/results.png\" alt=\"results\" width=\"700\">\n",
     "\n",
@@ -282,23 +282,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"display: flex; justify-content: space-between; max-width: 1200px; margin: 0 auto;\">\n",
-    "    <video controls style=\"width: 30%; max-height: 100%; border: 1px solid #ccc; box-sizing: border-box;\">\n",
-    "        <source src=\"https://files.catbox.moe/jour4q.mp4\" type=\"video/mp4\">\n",
-    "    </video>\n",
-    "    <video controls style=\"width: 30%; max-height: 100%; border: 1px solid #ccc; box-sizing: border-box;\">\n",
-    "        <source src=\"https://files.catbox.moe/5hfnkd.mp4\" type=\"video/mp4\">\n",
-    "    </video>\n",
-    "    <video controls style=\"width: 30%; max-height: 100%; border: 1px solid #ccc; box-sizing: border-box;\">\n",
-    "        <source src=\"https://files.catbox.moe/zx9wkb.mp4\" type=\"video/mp4\">\n",
-    "    </video>\n",
-    "</div>",
-    "[Video 1](https://files.catbox.moe/jour4q.mp4)",
-    "",
-    "[Video 2](https://files.catbox.moe/5hfnkd.mp4)",
-    "",
-    "[Video 3](https://files.catbox.moe/zx9wkb.mp4)",
-    ""
+    "[Video 1](https://files.catbox.moe/jour4q.mp4)\n",
+    "\n",
+    "[Video 2](https://files.catbox.moe/5hfnkd.mp4)\n",
+    "\n",
+    "[Video 3](https://files.catbox.moe/zx9wkb.mp4)"
    ]
   },
   {
