--- a/yolobears/yolobears.ipynb
+++ b/yolobears/yolobears.ipynb
@@ -282,11 +282,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Video 1](https://files.catbox.moe/jour4q.mp4)\n",
+    "[Bear and mirror](https://files.catbox.moe/jour4q.mp4)\n",
     "\n",
-    "[Video 2](https://files.catbox.moe/5hfnkd.mp4)\n",
+    "[Polar bear petting dog](https://files.catbox.moe/5hfnkd.mp4)\n",
     "\n",
-    "[Video 3](https://files.catbox.moe/zx9wkb.mp4)"
+    "[Brown Bear & Black Bear Snuggles](https://files.catbox.moe/zx9wkb.mp4)"
    ]
   },
   {
